fix screen overflow with manual function examples

--- a/manual/components/example/example.module.scss
+++ b/manual/components/example/example.module.scss
@@ -21,7 +21,8 @@
   flex-direction: column;
   margin: 8px 0;
   padding: 0 0 4px 0;
-  max-width: 100vw;
+  max-width: 90vw;
+  box-sizing: border-box;
 
   @media (min-width: 512px) {
     flex-direction: row;
